added cards for moves, trainers and items. Empty Data

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
 <header>
     <a href="#" class="brand">Exiled</a>
-    <nav><a href="#dex">Pokédex</a></nav>
+    <nav>
+        <a href="#dex">Pokédex</a>
+        <a href="#moves">Moves</a>
+        <a href="#items">Items</a>
+        <a href="#trainers">Trainers</a>
+    </nav>
     <div class="spacer"></div>
     <input id="q" class="hidden" type="search" placeholder="Search name, dex, move, ability" />
 </header>
