polished index bar a bit

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 <main id="app"></main>
 
-<template id="placeholder-sprite">
-    <!-- Placeholder sprite (no real art yet). Replace when you add sprites.
-         For now we generate an inline SVG via data URI in app.js -->
-</template>
+<!--<template id="placeholder-sprite">-->
+<!--    &lt;!&ndash; Placeholder sprite (no real art yet). Replace when you add sprites.-->
+<!--         For now we generate an inline SVG via data URI in app.js &ndash;&gt;-->
+<!--</template>-->
 
 <script src="app.js"></script>
 </body>
