split app.js file into multiple files for better file management

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 <!--         For now we generate an inline SVG via data URI in app.js &ndash;&gt;-->
 <!--</template>-->
 
-<script src="app.js"></script>
+<script type="module" src="./app.js"></script>
 </body>
 </html>
