search bar now has clickable prefixes for more precise searching, can also stack.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <a href="#trainers">Trainers</a>
     </nav>
     <div class="spacer"></div>
-    <input id="q" class="hidden" type="search" placeholder="Search name, dex, move, ability" />
+    <div class="searchbar">
+        <input id="q" type="search" placeholder="Search name, dex, move, ability" />
+        <div id="q-chips" class="chips"></div>
+        <div id="q-menu" class="suggest hidden"></div>
+    </div>
 </header>
 
 <main id="app"></main>
